chore: Add dependencies for audio playback and track model

--- a/appmusics/pubspec.yaml
+++ b/appmusics/pubspec.yaml
@@ -9,7 +9,10 @@ dependencies:
   carousel_slider: ^4.2.1
   flutter:
     sdk: flutter
+  http: ^1.2.2
+  just_audio: ^0.9.39
   phosphor_flutter: ^2.1.0
+  provider: ^6.1.2
 
 
 
